[package]
name = "create-commit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "gzip", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
once_cell = "1.19"
